--- a/configure.ac
+++ b/configure.ac
@@ -611,6 +611,10 @@ AC_CHECK_MEMBER(struct msghdr.msg_control,,
 #include <sys/socket.h>
 	])
 
+AC_CHECK_MEMBER(struct tpacket_auxdata.tp_vlan_tci,
+	[AC_DEFINE([VLAN_TCI_PRESENT], [1], [tpacket_auxdata.tp_vlan_tci present])]
+	,, [#include <linux/if_packet.h>])
+
 # Append selected warning levels to CFLAGS before substitution (but after
 # AC_TRY_COMPILE & etc).
 CFLAGS="$CFLAGS $STD_CWARNINGS"
