fixed location messages

--- a/configure.ac
+++ b/configure.ac
@@ -264,7 +264,7 @@ AC_ARG_WITH(srv-lease-file,
 	AC_DEFINE_UNQUOTED([_PATH_DHCPD_DB], ["$withval"],
 			   [File for dhcpd leases.]))
 
-echo -n "checking for dhcpd.leases location..."
+AC_MSG_CHECKING([for dhcpd.leases location])
 if [[ "x$with_srv_lease_file" = "x" ]] ; then
 	if [[ -d "${localstatedir}/db" ]] ; then
 		with_srv_lease_file="${localstatedir}/db/dhcpd.leases"
@@ -286,7 +286,7 @@ if [[ "x$with_srv_lease_file" = "x" ]] ; then
 		with_srv_lease_file="/etc/dhcpd.leases"
 	fi
 fi
-echo "$with_srv_lease_file"
+AC_MSG_RESULT($with_srv_lease_file)
 
 AC_ARG_WITH(srv6-lease-file,
 	AS_HELP_STRING([--with-srv6-lease-file=PATH],[File for dhcpd6 leases 
@@ -294,7 +294,7 @@ AC_ARG_WITH(srv6-lease-file,
 	AC_DEFINE_UNQUOTED([_PATH_DHCPD6_DB], ["$withval"],
 			   [File for dhcpd6 leases.]))
 
-echo -n "checking for dhcpd6.leases location..."
+AC_MSG_CHECKING([for dhcpd6.leases location])
 if [[ "x$with_srv6_lease_file" = "x" ]] ; then
 	if [[ -d "${localstatedir}/db" ]] ; then
 		with_srv6_lease_file="${localstatedir}/db/dhcpd6.leases"
@@ -316,7 +316,7 @@ if [[ "x$with_srv6_lease_file" = "x" ]] ; then
 		with_srv6_lease_file="/etc/dhcpd6.leases"
 	fi
 fi
-echo "$with_srv6_lease_file"
+AC_MSG_RESULT($with_srv6_lease_file)
 
 AC_ARG_WITH(cli-lease-file,
 	AS_HELP_STRING([--with-cli-lease-file=PATH],[File for dhclient leases 
@@ -324,7 +324,7 @@ AC_ARG_WITH(cli-lease-file,
 	AC_DEFINE_UNQUOTED([_PATH_DHCLIENT_DB], ["$withval"],
 			   [File for dhclient leases.]))
 
-echo -n "checking for dhclient.leases location..."
+AC_MSG_CHECKING([for dhclient.leases location])
 if [[ "x$with_cli_lease_file" = "x" ]] ; then
 	if [[ -d "${localstatedir}/db" ]] ; then
 		with_cli_lease_file="${localstatedir}/db/dhclient.leases"
@@ -346,7 +346,7 @@ if [[ "x$with_cli_lease_file" = "x" ]] ; then
 		with_cli_lease_file="/etc/dhclient.leases"
 	fi
 fi
-echo "$with_cli_lease_file"
+AC_MSG_RESULT($with_cli_lease_file)
 
 AC_ARG_WITH(cli6-lease-file,
 	AS_HELP_STRING([--with-cli6-lease-file=PATH],[File for dhclient6 leases 
@@ -354,7 +354,7 @@ AC_ARG_WITH(cli6-lease-file,
 	AC_DEFINE_UNQUOTED([_PATH_DHCLIENT6_DB], ["$withval"],
 			   [File for dhclient6 leases.]))
 
-echo -n "checking for dhclient6.leases location..."
+AC_MSG_CHECKING([for dhclient6.leases location])
 if [[ "x$with_cli6_lease_file" = "x" ]] ; then
 	if [[ -d "${localstatedir}/db" ]] ; then
 		with_cli6_lease_file="${localstatedir}/db/dhclient6.leases"
@@ -376,7 +376,7 @@ if [[ "x$with_cli6_lease_file" = "x" ]] ; then
 		with_cli6_lease_file="/etc/dhclient6.leases"
 	fi
 fi
-echo "$with_cli6_lease_file"
+AC_MSG_RESULT($with_cli6_lease_file)
 
 AC_ARG_WITH(srv-pid-file,
 	AS_HELP_STRING([--with-srv-pid-file=PATH],[File for dhcpd process information
