--- a/util/Makefile.bind.in
+++ b/util/Makefile.bind.in
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2009-2012  Internet Systems Consortium, Inc. ("ISC")
+# Copyright (C) 2009-2012, 2015  Internet Systems Consortium, Inc. ("ISC")
 #
 # Permission to use, copy, modify, and/or distribute this software for any
 # purpose with or without fee is hereby granted, provided that the above
@@ -13,20 +13,28 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: Makefile.bind,v 1.8 2012/04/05 22:16:47 sar Exp $
-
 # Configure and build the bind libraries for use by DHCP
 
 include ./version.tmp
 version=${MAJORVER}.${MINORVER}.${PATCHVER}${RELEASETYPE}${RELEASEVER}
 
-# bindvar.tmp is constructed by configure, it has the paths for
+# bindvar.tmp is constructed by configure, it has the paths for bind
 # if GMAKE is blank the shell script couldn't find a gmake to use.
 # binddir=
 # GMAKE=
 include ./bindvar.tmp
 
 bindsrcdir=bind-${version}
+
+bindconfig = --disable-kqueue --disable-epoll --disable-devpoll
+bindconfig += --without-openssl --without-libxml2 --enable-exportlib
+bindconfig += --enable-threads=no --with-export-includedir=${binddir}/include
+bindconfig += --with-export-libdir=${binddir}/lib --with-gssapi=no
+bindconfig += @BINDCONFIG@
+
+cleandirs = ./lib ./include
+@BIND_ATF_TRUE@cleandirs += ./atf
+cleanfiles = ./configure.log ./build.log ./install.log
 
 all:
 # Extract the source from the tarball, if it hasn't been already.
@@ -42,18 +50,29 @@ all:
 	fi
 
 # Configure the export libraries
-# Currently disable the epoll and devpoll options as they don't interact
-# well with the DHCP code.
+# Currently disable the epoll, devpoll and kqueue options as they
+# don't interact well with the DHCP code.
 # If the top-level Bind Makefile exists we skip the configuration step
 # as we assume it's done and won't change.  Doing a make clean will
 # reset things if necessary.
-	@if test -f ${bindsrcdir}/Makefile ; then                  \
-		echo Bind export libraries already configured ;    \
-	else                                                       \
-		echo Configuring BIND Export libraries for DHCP. ; \
-		rm -rf ./lib ./include ./configure.log ./build.log ./install.log ; \
-		(cd ${bindsrcdir} && ./configure --disable-kqueue --disable-epoll --disable-devpoll --without-openssl --without-libxml2 --enable-exportlib --enable-threads=no --with-export-includedir=${binddir}/include --with-export-libdir=${binddir}/lib --with-gssapi=no > ${binddir}/configure.log); \
+	@if test -f ${bindsrcdir}/Makefile ; then                       \
+		echo Bind export libraries already configured ;         \
+	else                                                            \
+		echo Configuring BIND Export libraries for DHCP. ;      \
+		rm -rf ${cleandirs} ${cleanfiles} ;                     \
+		(cd ${bindsrcdir} &&                                    \
+                 ./configure ${bindconfig} > ${binddir}/configure.log); \
 	fi
+
+# Build and copy the ATF support if not yet installed.
+@BIND_ATF_TRUE@	@if test -d ./atf ; then				      \
+@BIND_ATF_TRUE@		echo ATF support already installed ;		      \
+@BIND_ATF_TRUE@	else							      \
+@BIND_ATF_TRUE@		echo Building ATF support ;			      \
+@BIND_ATF_TRUE@		(cd ${bindsrcdir}/unit;				      \
+@BIND_ATF_TRUE@		 MAKE=${GMAKE} ${GMAKE} atf > ${binddir}/build.log ;  \
+@BIND_ATF_TRUE@		 cp -rp atf ${binddir}) ;			      \
+@BIND_ATF_TRUE@	fi
 
 # Build and install the export libraries
 # No need to do anything if we already have something installed.
@@ -63,7 +82,7 @@ all:
 		echo Building BIND Export libraries - this takes some time. ;\
 		(cd ${bindsrcdir}/lib/export ;                               \
 		  echo building in `pwd` ;                                   \
-		  MAKE=${GMAKE} ${GMAKE} > ${binddir}/build.log) ;           \
+		  MAKE=${GMAKE} ${GMAKE} >> ${binddir}/build.log) ;          \
                                                                              \
 		echo Installing BIND Export libraries to ${binddir}. ;       \
 		(cd ${bindsrcdir}/lib/export ;                               \
@@ -72,8 +91,7 @@ all:
 
 clean:
 	@echo Cleaning BIND export library.
-	rm -rf ${bindsrcdir} ./lib ./include ./configure.log ./build.log \
-		./install.log
+	rm -rf ${bindsrcdir} ${cleandirs} ${cleanfiles}
 
 # Include the following so that this Makefile is happy when the parent
 # tries to use them.
