checkpoint (fixed unit test make 2)

--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -37,7 +37,7 @@ ns_name_unittest_LDADD += ../libdhcp.a  \
 	$(BINDLIBDIR)/libdns.a $(BINDLIBDIR)/libisccfg.a  $(BINDLIBDIR)/libisc.a
 
 check: $(ATF_TESTS)
-	cp -n $(top_srcdir)/common/tests/Atffile Atffile
+	-cp -n $(top_srcdir)/common/tests/Atffile Atffile
 	sh ${top_builddir}/tests/unittest.sh
 
 endif
