--- a/util/Makefile.bind.in
+++ b/util/Makefile.bind.in
@@ -101,12 +101,5 @@ clean:
 # Include the following so that this Makefile is happy when the parent
 # tries to use them.
 
-distdir:
+check distdir distclean dvi install installcheck uninstall:
 
-distclean:
-
-install:
-
-check:
-
-uninstall:
