--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -252,6 +252,7 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BINDCONFIG = @BINDCONFIG@
 BINDDIR = @BINDDIR@
+BINDSRCDIR = @BINDSRCDIR@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -744,7 +745,8 @@ uninstall-am:
 
 
 @HAVE_ATF_TRUE@check: $(ATF_TESTS)
-@HAVE_ATF_TRUE@	sh ${top_srcdir}/tests/unittest.sh
+@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/common/tests/Atffile Atffile
+@HAVE_ATF_TRUE@	sh ${top_builddir}/tests/unittest.sh
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
