--- a/client/tests/Makefile.in
+++ b/client/tests/Makefile.in
@@ -214,6 +214,7 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BINDCONFIG = @BINDCONFIG@
 BINDDIR = @BINDDIR@
+BINDSRCDIR = @BINDSRCDIR@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -711,7 +712,12 @@ info:
 	@echo "ATF_LIBS=$(ATF_LIBS)"
 
 @HAVE_ATF_TRUE@check: $(ATF_TESTS)
-@HAVE_ATF_TRUE@	sh ${top_srcdir}/tests/unittest.sh
+@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/Atffile Atffile
+@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid0_test.txt duid0_test.txt
+@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid1_test.txt duid1_test.txt
+@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid2_test.txt duid2_test.txt
+@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid3_test.txt duid3_test.txt
+@HAVE_ATF_TRUE@	sh ${top_builddir}/tests/unittest.sh
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
