--- a/Makefile.in
+++ b/Makefile.in
@@ -242,6 +242,7 @@ CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DISTCHECK_ATF_CONFIGURE_FLAG = @DISTCHECK_ATF_CONFIGURE_FLAG@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
@@ -352,6 +353,11 @@ EXTRA_DIST = RELNOTES LICENSE \
 
 SUBDIRS = @BINDSRCDIR@ includes tests common omapip client dhcpctl relay server
 nobase_include_HEADERS = dhcpctl/dhcpctl.h
+
+#
+# distcheck tuning
+#
+DISTCHECK_CONFIGURE_FLAGS = @DISTCHECK_ATF_CONFIGURE_FLAG@
 all: all-recursive
 
 .SUFFIXES:
